Please read the server changelog carefully for longer explanations of the changes before or after
your server update. We recommend installing the update as our app was mainly tested with it and
recipe ingredient fulfillment information in our app are finally all correct and complete with it.
Older supported versions still work but are not tested with every new change.

We kindly ask you to give our app a good review on Google Play if you like it. This helps us
a lot and will motivate us to implement new features.

Specific changes for Grocy server 4.0.0 (other versions should behave the same way as before):

- New: Compatibility for server version 4.0.0 (#644)
- New: Quantity unit conversions can be transitive now (unlimited QU levels)
- New: Product option "Factor purchase to stock unit" is disabled - Use normal product specific
  QU conversions instead, if needed
- New: Product option "Default quantity unit consume"
- New: Product option "Quantity unit for prices"
- Improved: Load label for energy values from server (was fixed kcal before)
- Improved: Show calories and prices on recipe ingredients list
- Fixed: Network error when saving a new product (#642)
- Fixed: Fulfillment info on recipe ingredients list was wrong with substituted products (#669)

All other changes, divided into app sections:

#### Stock

- New: Stock overview page now has checkbox options for all additional fields (#663)
- New: Product choose page after barcode scan now has really useful copy option for products (#636)
- New: Product pictures now can be removed and added with camera and clipboard (#536)
- New: On purchase page, store now can be pinned (always initially selected in session) (#525)
- New: Product groups, locations & quantity units now can be created while creating product
- Improved: Stock reminder is now for products which are not fresh anymore (expired, overdue
  or due soon)
- Improved: "Create product" page now uses "save and not close" buttons