@@ -24,8 +24,8 @@
   tools:ignore="AlwaysShowAction">
 
   <item
-    android:id="@+id/action_track_chore_execution"
-    android:title="@string/action_track_chore_execution"
+    android:id="@+id/action_track_next_chore_schedule"
+    android:title="@string/action_track_next_chore_schedule"
     android:icon="@drawable/ic_round_play_arrow"
     app:showAsAction="always" />
 
@@ -33,6 +33,12 @@
     android:id="@+id/action_skip_next_chore_schedule"
     android:title="@string/action_skip_next_chore_schedule"
     android:icon="@drawable/ic_round_skip_next"
+    app:showAsAction="always" />
+
+  <item
+    android:id="@+id/action_track_chore_execution"
+    android:title="@string/action_track_chore_execution"
+    android:icon="@drawable/ic_round_play_arrow"
     app:showAsAction="always" />
 
   <item
